--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,11 +1,5 @@
-.layout {
-    display: flex;
-    height: 100vh;
-  }
-  
   .content {
-    flex: 1;
-    padding: 20px;
     overflow-y: auto;
+    background-color: lightgray;
   }
   
