--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,7 +14,7 @@
   z-index: 1000;
 }
 .sub-navbar {
-  height: 60px;
+  /* height: 60px; */
   width: 100%;
   padding: 0px 32px;
   display: flex;
@@ -35,12 +35,13 @@
 }
 
 .nav-link-wrapper {
-  font-size: large;  
+  /* font-size: large;   */
 }
 
 .nav-link {
   text-decoration: none;
   color: #fff;
+  font-size: small;
 }
 
 .disabled-cls {
